Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-11-26 Kimmo
 PATCH: [ 1602365 ] Move SelectFile and SelectFolder routines to separate file
  Src: DirActions.cpp DirCmpReportDlg.cpp FileFiltersDlg.cpp MainFrm.cpp Merge.cpp
   Merge.dsp Merge.h MergeDoc.cpp OpenDlg.cpp PatchDlg.cpp ProjectFilePathsDlg.cpp
   PropRegistry.cpp PropVss.cpp
  Src/Common: PreferencesDlg.cpp
  Src new files: FileOrFolderSelect.cpp FileOrFolderSelect.h

2006-11-25 Kimmo
 PATCH: [ 1596692 ] Change the way modified docs are saved to fix several issues
  Src: MainFrm.cpp MergeDiffDetailView.cpp MergeDoc.cpp MergeDoc.h

2006-11-21 Kimmo
 PATCH: [ 1589563 ] Fix crash with weird filetimes (and cleanup the code)
  Src: DiffFileInfo.cpp DiffFileInfo.h DirScan.cpp DirViewColHandler.cpp
   FileInfo.cpp FileInfo.h

2006-11-19 Gal
 PATCH: [ 1590831 ] Handle minimize argument (Bug 1570351)
  Src/Common: SplitterWndEx.cpp
  Src: Merge.cpp MergeArgs.cpp MergeDiffDetailView.cpp

2006-11-13 Gal
 BUG: [ 1594188 ] /x option does not work
  Src: MergeDoc.cpp

2006-11-06 Takashi
 PATCH: [ 1586705 ] DirView icons (Tim made [not]equalfile.ico)
  Src/res: equalfile.ico fileskip.ico lfile.ico notequalfile.ico rfile.ico

2006-11-03 Kimmo
 PATCH: [ 1589438 ] Add read-only info to ProjectFile dialog
  Src: MainFrm.cpp
2006-11-03 Tim
 PATCH: [ 1589601 ] Add "ReDim" keyword to Visual Basic highlighter
  Src\editlib: basic.cpp

2006-11-02 Kimmo
 PATCH: [ 1588212 ] Add manifest file to resource file
  Src: Merge.rc
  Src/Languages/*: Merge*.rc
  Move files from Installer/InnoSetup: WinMerge.exe.manifest WinMergeU.exe.manifest
   to Src/res

2006-10-31 Kimmo
 PATCH: [ 1586869 ] Fix File Select -dialog modality
  Src: DirCmpReportDlg.cpp FileFiltersDlg.cpp MainFrm.cpp Merge.cpp Merge.h
   MergeDoc.cpp PatchDlg.cpp ProjectFilePathsDlg.cpp PropRegistry.cpp PropVss.cpp
  Src/Common: PreferencesDlg.cpp